fix: overflow behaviour on home page

--- a/src/components/addcart-button/addToCartButton.scss
+++ b/src/components/addcart-button/addToCartButton.scss
@@ -9,5 +9,6 @@
     display: flex;
     align-items: center;
     gap: 0.35em;
+    font-size: 1.25rem;
   }
 }
