--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,4 +1,5 @@
 $primary-gray: #dddddd;
 $primary-green: #65c100;
 $primary-white: #fff;
+$primary-red: rgb(255, 32, 32);
 $variant-primary-green: rgb(7, 182, 7);
